# Cypher-System-JSON-DB

./: CSDR.json  CSRD.json  README.md
csrd-rs/: .gitignore  Abilities.md  AbilityTiers.md  Artifacts.md  Cargo.toml  Creatures.md  CypherTables.md  Descriptors.md  Flavors.md  Foci.md  LesserCreatures.md  Npc.md  README.md  SuperVillains.md  Types.md  cyphers.md  equipment.md  rand_tables.md
csrd-rs/src/: ability.rs  artifact.rs  common_types.rs  creature.rs  cyphers.rs  descriptor.rs  equipment.rs  flavor.rs  focus.rs  main.rs  tables.rs  types.rs
