[package]
name = "csdr_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.6.0"
unidecode = "0.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
derive_builder = "0.11.2"
